added login function

--- a/public/musicList.html
+++ b/public/musicList.html
@@ -12,12 +12,7 @@
 		/>
 	</head>
 	<body>
-		<h1>This is the indexpage</h1>
-
-		<a href="./login.html">login page</a>
-		<div></div>
-		<a href="./registration.html">register page</a>
-
+		<h1>This is the muisc list page</h1>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
