--- a/public/registration.html
+++ b/public/registration.html
@@ -27,7 +27,7 @@
       <div class="row registerRow">
           <form id="registerForm">
             <div class="registerTitle">Register</div>
-            <div class="registerError">User name already exists</div>
+            <!-- <div class="registerError">User name already exists</div> -->
             <div>
               <div class="registerUsername">
                 <label class="form-label">User name</label>
