beautify login and register page

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
 		<a href="./login.html">login page</a>
 		<div></div>
 		<a href="./registration.html">register page</a>
+		<div></div>
+		<a href="./sample.html">sample</a>
 
 
 		<script
