--- a/public/musicList.html
+++ b/public/musicList.html
@@ -78,11 +78,11 @@
             </form>
           
     
-        <div class="sharedGamePostsSection">
-          <div class="sharedGamePostsTitle">Shared Game Posts</div>
+        <div class="sharedmusicSection">
+          <div class="sharedmusicTitle">Music list</div>
         </div>
         <!-- Serves as a container to the game posts list -->
-        <div id="gamePostsContainer"></div>
+        <div id="musiclistContainer"></div>
       </div>
     </main>
 
