--- a/public/musicList.html
+++ b/public/musicList.html
@@ -4,15 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <link
-
-
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-			crossorigin="anonymous"
-
-		/> -->
   </head>
   <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-light">
@@ -38,7 +29,7 @@
                     class="form-select"
                     type="form-control"
                     id="categorySelectId"
-                    name="genres"
+                    name="genre"
 					required
                   >
                     <option selected>Pop</option>
@@ -76,20 +67,9 @@
                 </div>
               </div>
             </form>
-          
-    
-        <div class="sharedGamePostsSection">
-          <div class="sharedGamePostsTitle">Shared Game Posts</div>
-        </div>
-        <!-- Serves as a container to the game posts list -->
-        <div id="gamePostsContainer"></div>
+
       </div>
     </main>
-
-    <!-- <script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-			crossorigin="anonymous"
-		></script> -->
+    <script src="./javascripts/music.js"></script>
   </body>
 </html>
