--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<link rel="stylesheet" href="./stylesheets/index.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -12,15 +13,71 @@
 		/>
 	</head>
 	<body>
-		<h1>This is the indexpage</h1>
+		
 
-		<a href="./login.html">login page</a>
-		<div></div>
-		<a href="./registration.html">register page</a>
-		<div></div>
-		<a href="./sample.html">sample</a>
+		<div class="container-fluid" id="login-container">
+			<div class="row">
+				<div class="col-md-4"></div>
 
+				<div class="col-md-4 bg-light rounded" id="login-bg">
+					<h1>log in</h1>
+					<div class="loginError">Incorrect username or password</div>
 
+					<form action="/login" method="POST" id="loginForm">
+						<div class="mb-3">
+							<label for="userlogin" class="form-label"
+								>Username</label
+							>
+							<input
+								class="form-control"
+								id="userlogin"
+								name="userName"
+								type="text"
+								required="true"
+							/>
+							<div id="emailHelp" class="form-text">
+								We'll never share your email with anyone else.
+							</div>
+						</div>
+						<div class="mb-3">
+							<label for="passwordlogin" class="form-label"
+								>Password</label
+							>
+							<input
+								class="form-control"
+								id="passwordlogin"
+								name="password"
+								type="password"
+								required="true"
+							/>
+						</div>
+						<div class="text-center">
+							<button
+								type="submit"
+								class="btn btn-primary"
+								id="login-btn"
+							>
+								Login
+							</button>
+						</div>
+
+						<hr />
+						<div class="text-center">
+							<p class="secondfont">Don't have an account?</p>
+							<a
+								class="btn btn-primary"
+								href="registration.html"
+								role="button"
+								>Create An Account</a
+							>
+						</div>
+
+					</form>
+				</div>
+				<div class="col-md-4"></div>
+			</div>
+		</div>
+		<script src="./javascripts/usersClient.js"></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 			integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
