--- a/public/registration.html
+++ b/public/registration.html
@@ -65,7 +65,7 @@
               <p class="secondfont">Already have an account?</p>
               <a
                 class="btn btn-primary"
-                href="login.html"
+                href="index.html"
                 role="button"
                 >Log In</a
               >
