--- a/public/musicList.html
+++ b/public/musicList.html
@@ -24,12 +24,6 @@
       <li class="nav-item active">
         <a class="nav-link" href="./musicList.html">Home</a>
       </li>
-<!--       <li class="nav-item">
-        <a class="nav-link" href="#">Music List</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Search</a>
-      </li> -->
       <span>
       <li class="nav-item ">
         <a class="nav-link" href="./index.html">Logout</a>
@@ -37,21 +31,18 @@
       </span>
 
     </ul>
-<!--     <span class="nav-item  my-2 my-lg-0">
-
-      <a href="index.html" class="btn btn-primary " role="button">Logout</a>
-    </span> -->
   </div>
   </nav>
 
     <main>
 
-      <h2>Add music to your play list</h2>
+      <h2>Add music to your playlist</h2>
       <div class="row gx-2" id="userlist"></div>
 
-      <div class="row gx-2" id="playList"></div>
+      <div class="row gx-2" id="playList">
+        <h2>Upload your music</h2>
+      </div>
       <div class="container">
-            <!-- <div class="createPostTitle">Here to upload your music</div> -->
             <form id="createMusic">
 
               <div class="row">
