--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
+		<meta name="author" content="Xingjian Bi & Yi Zhou" />
+		<meta name="description" content="myMusicList" />
+		<link rel="shortcut icon" href="./public/image/icon.png" />
 		<link rel="stylesheet" href="./stylesheets/index.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
