--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<title>Document</title>
 		<meta name="author" content="Xingjian Bi & Yi Zhou" />
 		<meta name="description" content="myMusicList" />
-		<link rel="shortcut icon" href="./image/icon.png" />
+		<link rel="shortcut icon" href="./images/icon.png" />
 		<link rel="stylesheet" href="./stylesheets/index.css" />
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
